--- a/docs/_sass/_variables.scss
+++ b/docs/_sass/_variables.scss
@@ -8,6 +8,7 @@ $grid-gutter-width:          4px;
 $container-max-width:        1000px;
 $container-max-width-lg:     1600px;
 $left-gird-width:            180px;
+$topnav-collapse-width:      771px;
 
 
 //  Typography
@@ -32,9 +33,6 @@ $link-hover-color:      $oc-blue-7;
 
 $nav-color:             $oc-gray-6;
 $nav-color-highlight:   $oc-gray-7;
-
-$index-color:           $oc-gray-6;
-$index-color-highlight: $oc-gray-7;
 
 
 //  ───────────────────────────────────
