--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -50,7 +50,7 @@
                               page.url == '/documents.html' %}
                         active
                         {% endif %}" 
-                 href="{{ site.baseurl }}/swatches.html">Menus</a>
+                 href="{{ site.baseurl }}/ingredients.html">Menus</a>
               <ul class="nav-menus">
                 <li><a class="nav-menu" href="{{ site.baseurl }}/ingredients.html">Ingredients</a></li>
                 <li><a class="nav-menu" href="{{ site.baseurl }}/documents.html">Documents</a></li>
