--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -88,20 +88,23 @@
 
     <div class="container">
       <section class="cover">
-        <h1>
-          Open color is an <br>
-          open-source <span class="no-wrap">color scheme</span><br>
-          optimized for UI<br>
-          like font, background, border, etc.
-        </h1>
-        <div class="metadata">
-          <div class="version">
-            Version {{ site.oc-version }}
-          </div>
-          <div class="license">
-            MIT license
+        <div class="cover-content">
+          <h1>
+            Open color is an <br>
+            open-source <span class="no-wrap">color scheme</span><br>
+            optimized for UI<br>
+            like font, background, border, etc.
+          </h1>
+          <div class="metadata">
+            <div class="version">
+              Version {{ site.oc-version }}
+            </div>
+            <div class="license">
+              MIT license
+            </div>
           </div>
         </div>
+        <script async type="text/javascript" src="//cdn.carbonads.com/carbon.js?zoneid=1696&serve=CVYD42T&placement=yeungithubioopencolor" id="_carbonads_js"></script>
       </section>
     </div>
     <div class="container">
