Added download link for mac os palette

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -78,6 +78,7 @@
                 <li><a class="nav-menu" href="{{ site.baseurl }}/asset/download/open-color_{{ site.oc-version }}.ase" download>Illustrator swatches</a></li>
                 <li><a class="nav-menu" href="{{ site.baseurl }}/asset/download/open-color_{{ site.oc-version }}.sketchpalette" download>Sketch palette</a></li>
                 <li><a class="nav-menu" href="{{ site.baseurl }}/asset/download/open-color_{{ site.oc-version }}.gpl" download>Inkscape swatches</a></li>
+                <li><a class="nav-menu" href="{{ site.baseurl }}/asset/download/open-color_{{ site.oc-version }}.clr" download>Mac OS palette</a></li>
               </ul>
             </li>
             <li class="nav-menus-group"><a class="menus-title menus-github" href="https://github.com/yeun/open-color">View on Github</a></li>
