Added window font

--- a/docs/_sass/_variables.scss
+++ b/docs/_sass/_variables.scss
@@ -14,7 +14,7 @@ $topnav-collapse-width:      771px;
 //  Typography
 //  ───────────────────────────────────
 
-$font-family-base:      -apple-system, BlinkMacSystemFont, Lato, Verdana, Arial, sans-serif;
+$font-family-base:      -apple-system, BlinkMacSystemFont, Lato, "Segoe UI", Verdana, Arial, sans-serif;
 $font-family-headline:  $font-family-base;
 $font-family-mono:      'Roboto Mono', monospace;
 
