--- a/docs/stylesheets/style.scss
+++ b/docs/stylesheets/style.scss
@@ -8,12 +8,14 @@
 @import 'grid';
 @import 'layout';
 @import 'navbar';
+@import 'cover';
 @import 'shortcuts';
 @import 'swatches';
 @import 'ingredients';
 @import 'posts';
 @import 'mobile';
 @import 'carbonads';
+
 
 html {
   box-sizing: border-box;
@@ -74,19 +76,4 @@ ul > li + li {
   margin-top: 40px;
   font-size: 22px;
   color: $oc-gray-6;
-}
-
-.cover {
-  padding: 60px 0 70px;
-  border-bottom: $border-base;
-
-  h1 {
-    margin-top: 0;
-    margin-bottom: 40px;
-    font-weight: 300;
-    color: $text-color;
-    font-size: 22px;
-    letter-spacing: 0.1em;
-    text-transform: uppercase;
-  }
 }
