--- a/docs/_sass/_shortcuts.scss
+++ b/docs/_sass/_shortcuts.scss
@@ -1,6 +1,14 @@
+.subnav-menu {
+  font-size: 16px;
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: $letter-spacing-sm;
+  color: $text-color;
+  margin-right: 30px;
+}
 
 .shortcut-wrap {
-  padding: 36px 0;
+  padding: 20px 0;
 
   .shortcut-menus {
     list-style: none;
@@ -11,7 +19,7 @@
 
   a.shortcut {
     display: block;
-    padding: 8px 0;
+    padding: 6px 0;
     width: 100%;
     font-size: 12px;
     color: $text-color-gray;
