--- a/docs/_sass/_cover.scss
+++ b/docs/_sass/_cover.scss
@@ -3,14 +3,11 @@
   border-bottom: $border-base;
 
   h1 {
-    margin-top: 0;
-    margin-bottom: 40px;
+    margin: 0 40px 40px 0;
     font-weight: 600;
     color: $text-color;
     font-size: 36px;
     line-height: 1.2;
-    // letter-spacing: 0.1em;
-    // text-transform: uppercase;
 
     .sub {
       padding-top: 20px;
