--- a/docs/_sass/_layout.scss
+++ b/docs/_sass/_layout.scss
@@ -46,6 +46,10 @@
 
 .shortcut-wrap {
   .shortcut-menus {
+    height: 240px;
+    -webkit-column-count: 2;
+       -moz-column-count: 2;
+            column-count: 2;
     -webkit-column-gap: 4px;
        -moz-column-gap: 4px;
             column-gap: 4px;
