Adjusted shortcut style

--- a/docs/_sass/_mobile.scss
+++ b/docs/_sass/_mobile.scss
@@ -16,6 +16,12 @@
   }
   
 
+  // shourtcut
+  // -------------------------
+  .shortcut-wrap {
+    padding: 10px 0;
+  }
+
   // swatichs
   // -------------------------
 
