--- a/docs/_sass/_ingredients.scss
+++ b/docs/_sass/_ingredients.scss
@@ -9,16 +9,17 @@
   width: 100%;
 
   thead > tr > th {
-    padding-top: 0;
+    padding-top: 10px;
     padding-bottom: 10px;
     text-transform: uppercase;
     font-size: 14px;
     letter-spacing: 0.04em;
     line-height: 1;
     color: $text-color;
+    background-color: $oc-gray-0;
   }
 
-  tbody > tr:not(:first-child) > td {
+  tbody > tr > td {
     border-top: 1px solid $oc-gray-2;
   }
 
@@ -40,15 +41,12 @@
       text-transform: uppercase;
       letter-spacing: $letter-spacing-sm;
       color: $text-color;
+      font-weight: 500;
     }
 
 
     &:first-child {
       padding-left: 0;
-    }
-
-    &:last-child {
-      padding-right: 0;
     }
   }
 
