--- a/open-color.css
+++ b/open-color.css
@@ -1,7 +1,7 @@
 /*
  *
  *  𝗖 𝗢 𝗟 𝗢 𝗥
- *  v 1.5.1
+ *  v 1.6.0
  *
  *  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ */
 
@@ -169,26 +169,26 @@
 /*  Blue
  *  ─────────────────────────────────── */
 
-  --oc-blue-0: #e8f7ff;
-  --oc-blue-0-rgb: 232, 247, 255;
-  --oc-blue-1: #ccedff;
-  --oc-blue-1-rgb: 204, 237, 255;
-  --oc-blue-2: #a3daff;
-  --oc-blue-2-rgb: 163, 218, 255;
-  --oc-blue-3: #72c3fc;
-  --oc-blue-3-rgb: 114, 195, 252;
-  --oc-blue-4: #4dadf7;
-  --oc-blue-4-rgb: 77, 173, 247;
-  --oc-blue-5: #329af0;
-  --oc-blue-5-rgb: 50, 154, 240;
-  --oc-blue-6: #228ae6;
-  --oc-blue-6-rgb: 34, 138, 230;
-  --oc-blue-7: #1c7cd6;
-  --oc-blue-7-rgb: 28, 124, 214;
-  --oc-blue-8: #1b6ec2;
-  --oc-blue-8-rgb: 27, 110, 194;
-  --oc-blue-9: #1862ab;
-  --oc-blue-9-rgb: 24, 98, 171;
+  --oc-blue-0: #e7f5ff;
+  --oc-blue-0-rgb: 231, 245, 255;
+  --oc-blue-1: #d0ebff;
+  --oc-blue-1-rgb: 208, 235, 255;
+  --oc-blue-2: #a5d8ff;
+  --oc-blue-2-rgb: 165, 216, 255;
+  --oc-blue-3: #74c0fc;
+  --oc-blue-3-rgb: 116, 192, 252;
+  --oc-blue-4: #4dabf7;
+  --oc-blue-4-rgb: 77, 171, 247;
+  --oc-blue-5: #339af0;
+  --oc-blue-5-rgb: 51, 154, 240;
+  --oc-blue-6: #228be6;
+  --oc-blue-6-rgb: 34, 139, 230;
+  --oc-blue-7: #1c7ed6;
+  --oc-blue-7-rgb: 28, 126, 214;
+  --oc-blue-8: #1971c2;
+  --oc-blue-8-rgb: 25, 113, 194;
+  --oc-blue-9: #1864ab;
+  --oc-blue-9-rgb: 24, 100, 171;
 
 
 /*  Cyan
