--- a/open-color.less
+++ b/open-color.less
@@ -1,7 +1,7 @@
 //
 //
 //  𝗖 𝗢 𝗟 𝗢 𝗥
-//  v 1.5.1
+//  v 1.6.0
 //
 //  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 
@@ -118,7 +118,7 @@
 //  Blue
 //  ───────────────────────────────────
 
-@oc-blue-list: #e8f7ff, #ccedff, #a3daff, #72c3fc, #4dadf7, #329af0, #228ae6, #1c7cd6, #1b6ec2, #1862ab;
+@oc-blue-list: #e7f5ff, #d0ebff, #a5d8ff, #74c0fc, #4dabf7, #339af0, #228be6, #1c7ed6, #1971c2, #1864ab;
 
 @oc-blue-0: extract(@oc-blue-list, 1);
 @oc-blue-1: extract(@oc-blue-list, 2);
