--- a/open-color.scss
+++ b/open-color.scss
@@ -1,7 +1,7 @@
 //
 //
 //  𝗖 𝗢 𝗟 𝗢 𝗥
-//  v 1.5.1
+//  v 1.6.0
 //
 //  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 
@@ -185,16 +185,16 @@ $oc-indigo-9: map-get($oc-indigo-list, "9");
 //  ───────────────────────────────────
 
 $oc-blue-list: (
-  "0": #e8f7ff,
-  "1": #ccedff,
-  "2": #a3daff,
-  "3": #72c3fc,
-  "4": #4dadf7,
-  "5": #329af0,
-  "6": #228ae6,
-  "7": #1c7cd6,
-  "8": #1b6ec2,
-  "9": #1862ab
+  "0": #e7f5ff,
+  "1": #d0ebff,
+  "2": #a5d8ff,
+  "3": #74c0fc,
+  "4": #4dabf7,
+  "5": #339af0,
+  "6": #228be6,
+  "7": #1c7ed6,
+  "8": #1971c2,
+  "9": #1864ab
 );
 
 $oc-blue-0: map-get($oc-blue-list, "0");
