Add version number

--- a/templates/open-color.rcpx.hbs
+++ b/templates/open-color.rcpx.hbs
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE palette PUBLIC "-//Kreative//DTD ResplendentColor 1.0//EN" "http://www.kreativekorp.com/dtd/rcpx.dtd">
-<!-- https://yeun.github.io/open-color/ -->
+<!-- Open Color v {{version}} - https://yeun.github.io/open-color/ -->
 <palette name="Open Color"
          orientation="square"
          hwidth="241" hheight= "85"
