--- a/templates/open-color.tex.hbs
+++ b/templates/open-color.tex.hbs
@@ -10,7 +10,7 @@
 
 {{#each general as |color|}}  
 {{#with (hex2rgb color.hex) as |rgb|}}
-  \definecolor{{{color.name}}}{RGB}{{{rgb.r}}, {{rgb.g}}, {{rgb.b}}}
+  \definecolor{ {{~color.name~}} }{RGB}{ {{~rgb.r}}, {{rgb.g}}, {{rgb.b~}} }
 {{/with}}
 {{/each}}
 {{#each colors as |color|}}
@@ -21,7 +21,7 @@
 
 {{#each color.hex as |hex index|}}  
 {{#with (hex2rgb hex) as |rgb|}}
-  \definecolor{{{color.name}}-{{index}}}{RGB}{{{rgb.r}}, {{rgb.g}}, {{rgb.b}}}
+  \definecolor{ {{~color.name}}-{{index~}} }{RGB}{ {{~rgb.r}}, {{rgb.g}}, {{rgb.b~}} }
 {{/with}}
 {{/each}}
 {{/each}}
