Rename Github -> GitHub, LESS -> Less

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -49,14 +49,14 @@
               <a class="menus-title
                         {% if page.url == '/' %}
                         active
-                        {% endif %}" 
+                        {% endif %}"
                  href="{{ site.baseurl }}/">Swatches</a>
             </li>
             <li class="nav-menus-group">
               <a class="menus-title
                         {% if page.url == '/ingredients.html' %}
                         active
-                        {% endif %}" 
+                        {% endif %}"
                  href="{{ site.baseurl }}/ingredients.html">Ingredients</a>
             </li>
             <li class="nav-menus-group">
@@ -84,7 +84,7 @@
                 <li><a class="nav-menu" href="{{ site.baseurl }}/asset/download/open-color_{{ site.oc-version }}.clr" download>Mac OS palette</a></li>
               </ul>
             </li>
-            <li class="nav-menus-group"><a class="menus-title menus-github" href="https://github.com/yeun/open-color">Github</a></li>
+            <li class="nav-menus-group"><a class="menus-title menus-github" href="https://github.com/yeun/open-color">GitHub</a></li>
           </ul>
         </div>
       </div>
